eliminated magic numbers>128 from ldmsd.c,
We have a bad case of magic number-itis. To provoke improvement:
- added util/nomagic.sh which tells us where they are.
  ./util/nomagic.sh >badmagic; more badmagic
- added dstring and friends to ovis_util to give us a route to
  buffer overflow elimination.
- Replaced Jim's 32k message buffers with dynamic strings.
  We are apparently not checking for TRUNC results on socket messages, so
  receivers never get a chance to grow their strings. Senders can
  safely & efficiently compose messages of any size to send.
- Added an autoconf general purpose macro for specifying build-time
  magic numbers to makefiles and config.h's.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -229,6 +229,7 @@ fi
 dnl Reset LIBS variable.
 LIBS=""
 
+OPTION_WITH_MAGIC([LDMS_MSG_MAX],[32768],[Maximum control message length allowed to ldmsd (min 4095)])
 
 
 AC_SUBST(ac_configure_args)
